apps/microbot/microbot.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: microbot-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: microbot
    spec:
      containers:
      - name: microbot 
        image: dontrebootme/microbot:v1
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        ports:
        - containerPort: 80
